# plural-ru.py

./: .travis.yml  README.md  plural_ru.py  setup.cfg  setup.py
scripts/: plural
tests/plural-ru/examples/: test.py
