[metadata]
name = plural-ru
version = 2018.11.20
url = https://github.com/looking-for-a-job/plural-ru.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = plural russian

[options]
install_requires = 
	Click
	public
	setuptools
py_modules = 
	plural_ru
