# https://pypi.org/project/setupcfg-generator/
[metadata]
name = plural-ru
version = 2019.3.22
url = https://github.com/looking-for-a-job/plural-ru.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = plural russian

[options]
install_requires = 
	click
	public
	setuptools
py_modules = 
	plural_ru
